analyze result of vgg19

--- a/lrp.ipynb
+++ b/lrp.ipynb
@@ -6,11 +6,11 @@
    "id": "6ca024db-0240-4bc1-a901-6169b98bdf2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-05T20:42:59.933090Z",
-     "iopub.status.busy": "2025-02-05T20:42:59.932909Z",
-     "iopub.status.idle": "2025-02-05T20:43:02.057966Z",
-     "shell.execute_reply": "2025-02-05T20:43:02.057416Z",
-     "shell.execute_reply.started": "2025-02-05T20:42:59.933067Z"
+     "iopub.execute_input": "2025-02-18T20:57:53.980696Z",
+     "iopub.status.busy": "2025-02-18T20:57:53.980573Z",
+     "iopub.status.idle": "2025-02-18T20:57:56.179727Z",
+     "shell.execute_reply": "2025-02-18T20:57:56.179213Z",
+     "shell.execute_reply.started": "2025-02-18T20:57:53.980681Z"
     }
    },
    "outputs": [],
@@ -38,20 +38,41 @@
     "import argparse\n",
     "import time\n",
     "import pathlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import LinearSegmentedColormap"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e6eb19d0-a73e-48c0-b829-8ed3f44e8ef2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-18T20:57:56.180836Z",
+     "iopub.status.busy": "2025-02-18T20:57:56.180643Z",
+     "iopub.status.idle": "2025-02-18T20:57:56.183853Z",
+     "shell.execute_reply": "2025-02-18T20:57:56.183213Z",
+     "shell.execute_reply.started": "2025-02-18T20:57:56.180821Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Define custom colormap\n",
+    "colors = [\"white\", \"red\"]  # Transition from white to red\n",
+    "custom_cmap = LinearSegmentedColormap.from_list(\"white_red\", colors, N=256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "cfda1d7f-2d4d-4c97-8496-7285707668b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-05T20:43:02.059467Z",
-     "iopub.status.busy": "2025-02-05T20:43:02.059091Z",
-     "iopub.status.idle": "2025-02-05T20:43:02.063690Z",
-     "shell.execute_reply": "2025-02-05T20:43:02.063263Z",
-     "shell.execute_reply.started": "2025-02-05T20:43:02.059453Z"
+     "iopub.execute_input": "2025-02-18T20:57:56.184812Z",
+     "iopub.status.busy": "2025-02-18T20:57:56.184637Z",
+     "iopub.status.idle": "2025-02-18T20:57:56.197628Z",
+     "shell.execute_reply": "2025-02-18T20:57:56.196977Z",
+     "shell.execute_reply.started": "2025-02-18T20:57:56.184794Z"
     }
    },
    "outputs": [],
@@ -93,7 +114,7 @@
     "    r_min = r.min()\n",
     "    r_max = r.max()\n",
     "    r = (r - r_min) / (r_max - r_min)\n",
-    "    axes[1].imshow(r, cmap=\"afmhot\")\n",
+    "    axes[1].imshow(r, cmap='hot')\n",
     "    axes[1].set_axis_off()\n",
     "\n",
     "    fig.tight_layout()\n",
@@ -103,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d4c1f47f-f9d3-4858-b05a-f81f6f4826af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-05T20:43:02.064326Z",
-     "iopub.status.busy": "2025-02-05T20:43:02.064205Z",
-     "iopub.status.idle": "2025-02-05T20:43:02.078972Z",
-     "shell.execute_reply": "2025-02-05T20:43:02.077896Z",
-     "shell.execute_reply.started": "2025-02-05T20:43:02.064314Z"
+     "iopub.execute_input": "2025-02-18T20:57:56.198813Z",
+     "iopub.status.busy": "2025-02-18T20:57:56.198427Z",
+     "iopub.status.idle": "2025-02-18T20:57:56.202696Z",
+     "shell.execute_reply": "2025-02-18T20:57:56.202204Z",
+     "shell.execute_reply.started": "2025-02-18T20:57:56.198791Z"
     }
    },
    "outputs": [],
@@ -131,9 +152,10 @@
     "    print(f\"Using: {device}\\n\")\n",
     "\n",
     "    data_loader = get_data_loader()\n",
-    "\n",
+    "    \n",
     "    model = vgg19(weights=VGG19_Weights.DEFAULT)\n",
     "    model.to(device)\n",
+    "\n",
     "\n",
     "    lrp_model = LRPModel(model=model, top_k=0.02)\n",
     "\n",
@@ -150,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "73c3664c-4964-43d3-9fad-c5f48eb20212",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-05T20:43:02.079995Z",
-     "iopub.status.busy": "2025-02-05T20:43:02.079838Z",
-     "iopub.status.idle": "2025-02-05T20:43:04.329219Z",
-     "shell.execute_reply": "2025-02-05T20:43:04.328636Z",
-     "shell.execute_reply.started": "2025-02-05T20:43:02.079982Z"
+     "iopub.execute_input": "2025-02-18T20:58:26.874757Z",
+     "iopub.status.busy": "2025-02-18T20:58:26.874402Z",
+     "iopub.status.idle": "2025-02-18T20:58:28.799774Z",
+     "shell.execute_reply": "2025-02-18T20:58:28.798353Z",
+     "shell.execute_reply.started": "2025-02-18T20:58:26.874722Z"
     }
    },
    "outputs": [
@@ -168,7 +190,7 @@
      "text": [
       "Using: cuda\n",
       "\n",
-      "3.22 FPS\n"
+      "3.07 FPS\n"
      ]
     }
    ],
