--- a/lrp.ipynb
+++ b/lrp.ipynb
@@ -6,11 +6,11 @@
    "id": "6ca024db-0240-4bc1-a901-6169b98bdf2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T20:57:53.980696Z",
-     "iopub.status.busy": "2025-02-18T20:57:53.980573Z",
-     "iopub.status.idle": "2025-02-18T20:57:56.179727Z",
-     "shell.execute_reply": "2025-02-18T20:57:56.179213Z",
-     "shell.execute_reply.started": "2025-02-18T20:57:53.980681Z"
+     "iopub.execute_input": "2025-03-05T15:39:41.588761Z",
+     "iopub.status.busy": "2025-03-05T15:39:41.588641Z",
+     "iopub.status.idle": "2025-03-05T15:39:44.426923Z",
+     "shell.execute_reply": "2025-03-05T15:39:44.426364Z",
+     "shell.execute_reply.started": "2025-03-05T15:39:41.588746Z"
     }
    },
    "outputs": [],
@@ -48,11 +48,11 @@
    "id": "e6eb19d0-a73e-48c0-b829-8ed3f44e8ef2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T20:57:56.180836Z",
-     "iopub.status.busy": "2025-02-18T20:57:56.180643Z",
-     "iopub.status.idle": "2025-02-18T20:57:56.183853Z",
-     "shell.execute_reply": "2025-02-18T20:57:56.183213Z",
-     "shell.execute_reply.started": "2025-02-18T20:57:56.180821Z"
+     "iopub.execute_input": "2025-03-05T15:39:44.427574Z",
+     "iopub.status.busy": "2025-03-05T15:39:44.427364Z",
+     "iopub.status.idle": "2025-03-05T15:39:44.430456Z",
+     "shell.execute_reply": "2025-03-05T15:39:44.430022Z",
+     "shell.execute_reply.started": "2025-03-05T15:39:44.427560Z"
     }
    },
    "outputs": [],
@@ -68,11 +68,11 @@
    "id": "cfda1d7f-2d4d-4c97-8496-7285707668b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T20:57:56.184812Z",
-     "iopub.status.busy": "2025-02-18T20:57:56.184637Z",
-     "iopub.status.idle": "2025-02-18T20:57:56.197628Z",
-     "shell.execute_reply": "2025-02-18T20:57:56.196977Z",
-     "shell.execute_reply.started": "2025-02-18T20:57:56.184794Z"
+     "iopub.execute_input": "2025-03-05T15:39:44.431214Z",
+     "iopub.status.busy": "2025-03-05T15:39:44.431006Z",
+     "iopub.status.idle": "2025-03-05T15:39:44.435650Z",
+     "shell.execute_reply": "2025-03-05T15:39:44.435205Z",
+     "shell.execute_reply.started": "2025-03-05T15:39:44.431197Z"
     }
    },
    "outputs": [],
@@ -128,11 +128,11 @@
    "id": "d4c1f47f-f9d3-4858-b05a-f81f6f4826af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T20:57:56.198813Z",
-     "iopub.status.busy": "2025-02-18T20:57:56.198427Z",
-     "iopub.status.idle": "2025-02-18T20:57:56.202696Z",
-     "shell.execute_reply": "2025-02-18T20:57:56.202204Z",
-     "shell.execute_reply.started": "2025-02-18T20:57:56.198791Z"
+     "iopub.execute_input": "2025-03-05T15:39:44.436627Z",
+     "iopub.status.busy": "2025-03-05T15:39:44.436501Z",
+     "iopub.status.idle": "2025-03-05T15:39:44.440040Z",
+     "shell.execute_reply": "2025-03-05T15:39:44.439727Z",
+     "shell.execute_reply.started": "2025-03-05T15:39:44.436614Z"
     }
    },
    "outputs": [],
@@ -172,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "73c3664c-4964-43d3-9fad-c5f48eb20212",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T20:58:26.874757Z",
-     "iopub.status.busy": "2025-02-18T20:58:26.874402Z",
-     "iopub.status.idle": "2025-02-18T20:58:28.799774Z",
-     "shell.execute_reply": "2025-02-18T20:58:28.798353Z",
-     "shell.execute_reply.started": "2025-02-18T20:58:26.874722Z"
+     "iopub.execute_input": "2025-03-05T15:39:44.440833Z",
+     "iopub.status.busy": "2025-03-05T15:39:44.440705Z",
+     "iopub.status.idle": "2025-03-05T15:39:59.661269Z",
+     "shell.execute_reply": "2025-03-05T15:39:59.660772Z",
+     "shell.execute_reply.started": "2025-03-05T15:39:44.440820Z"
     }
    },
    "outputs": [
@@ -190,7 +190,26 @@
      "text": [
       "Using: cuda\n",
       "\n",
-      "3.07 FPS\n"
+      "2.28 FPS\n",
+      "7.60 FPS\n",
+      "7.55 FPS\n",
+      "7.69 FPS\n",
+      "11.59 FPS\n",
+      "10.10 FPS\n",
+      "6.67 FPS\n",
+      "8.52 FPS\n",
+      "5.34 FPS\n",
+      "5.29 FPS\n",
+      "8.42 FPS\n",
+      "7.23 FPS\n",
+      "6.77 FPS\n",
+      "4.33 FPS\n",
+      "5.80 FPS\n",
+      "4.77 FPS\n",
+      "6.26 FPS\n",
+      "1.98 FPS\n",
+      "6.81 FPS\n",
+      "23.22 FPS\n"
      ]
     }
    ],
