Reorganize files and add README file

--- a/vgg19_evaluation_csv.ipynb
+++ b/vgg19_evaluation_csv.ipynb
@@ -6,11 +6,11 @@
    "id": "7337d7e5-50ec-4865-bd2d-c050f7d6f6c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T14:19:18.938329Z",
-     "iopub.status.busy": "2025-02-18T14:19:18.938202Z",
-     "iopub.status.idle": "2025-02-18T14:19:21.393220Z",
-     "shell.execute_reply": "2025-02-18T14:19:21.392779Z",
-     "shell.execute_reply.started": "2025-02-18T14:19:18.938315Z"
+     "iopub.execute_input": "2025-03-08T10:42:17.070914Z",
+     "iopub.status.busy": "2025-03-08T10:42:17.070717Z",
+     "iopub.status.idle": "2025-03-08T10:42:19.468967Z",
+     "shell.execute_reply": "2025-03-08T10:42:19.468538Z",
+     "shell.execute_reply.started": "2025-03-08T10:42:17.070893Z"
     }
    },
    "outputs": [],
@@ -41,18 +41,24 @@
    "id": "2d2ff702-3cde-46a9-946a-f5409e1afafd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T14:19:21.394330Z",
-     "iopub.status.busy": "2025-02-18T14:19:21.394100Z",
-     "iopub.status.idle": "2025-02-18T14:19:21.582541Z",
-     "shell.execute_reply": "2025-02-18T14:19:21.582060Z",
-     "shell.execute_reply.started": "2025-02-18T14:19:21.394315Z"
+     "iopub.execute_input": "2025-03-08T10:42:19.470218Z",
+     "iopub.status.busy": "2025-03-08T10:42:19.469899Z",
+     "iopub.status.idle": "2025-03-08T10:42:19.632656Z",
+     "shell.execute_reply": "2025-03-08T10:42:19.632175Z",
+     "shell.execute_reply.started": "2025-03-08T10:42:19.470203Z"
     }
    },
    "outputs": [],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "# Read imagenette data into data loader\n",
-    "imagenette_data = ImageFolder(root='/home/yi/Downloads/imagenette2/val', transform=ToTensor())\n",
+    "#Process image\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),  # Resize to VGG19 input size\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Same normalization as ImageNet\n",
+    "])\n",
+    "imagenette_data = ImageFolder(root='/home/yi/Downloads/imagenette2/val', transform=transform)\n",
     "data_loader = torch.utils.data.DataLoader(imagenette_data, batch_size=1, shuffle=False)"
    ]
   },
@@ -62,11 +68,11 @@
    "id": "b81d9c16-7dc4-4c7f-b706-0bedf1f10603",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T14:19:21.583279Z",
-     "iopub.status.busy": "2025-02-18T14:19:21.583128Z",
-     "iopub.status.idle": "2025-02-18T14:19:21.631859Z",
-     "shell.execute_reply": "2025-02-18T14:19:21.629922Z",
-     "shell.execute_reply.started": "2025-02-18T14:19:21.583266Z"
+     "iopub.execute_input": "2025-03-08T10:42:19.633508Z",
+     "iopub.status.busy": "2025-03-08T10:42:19.633363Z",
+     "iopub.status.idle": "2025-03-08T10:42:19.638818Z",
+     "shell.execute_reply": "2025-03-08T10:42:19.638346Z",
+     "shell.execute_reply.started": "2025-03-08T10:42:19.633494Z"
     }
    },
    "outputs": [],
@@ -96,6 +102,20 @@
     "    7: 574,\n",
     "    8: 701, \n",
     "    9: 0\n",
+    "}\n",
+    "\n",
+    "# Manually rewire predicted class_id to class\n",
+    "pred_to_class = {\n",
+    "    1: 'English springer',\n",
+    "    2: 'cassette player',\n",
+    "    3: 'chain saw',\n",
+    "    4: 'church',\n",
+    "    5: 'French horn',\n",
+    "    6: 'garbage truck',\n",
+    "    7: 'gas pump',\n",
+    "    8: 'golf ball',\n",
+    "    9: 'parachute',\n",
+    "    0: 'tench'\n",
     "}"
    ]
   },
@@ -105,11 +125,11 @@
    "id": "1b057cf5-ae81-4adf-a96f-96210a38c079",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T14:19:21.634398Z",
-     "iopub.status.busy": "2025-02-18T14:19:21.633826Z",
-     "iopub.status.idle": "2025-02-18T14:19:22.975821Z",
-     "shell.execute_reply": "2025-02-18T14:19:22.975280Z",
-     "shell.execute_reply.started": "2025-02-18T14:19:21.634341Z"
+     "iopub.execute_input": "2025-03-08T10:42:19.639741Z",
+     "iopub.status.busy": "2025-03-08T10:42:19.639512Z",
+     "iopub.status.idle": "2025-03-08T10:42:21.385121Z",
+     "shell.execute_reply": "2025-03-08T10:42:21.384730Z",
+     "shell.execute_reply.started": "2025-03-08T10:42:19.639726Z"
     }
    },
    "outputs": [
@@ -164,7 +184,7 @@
        "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
        "    (4): ReLU(inplace=True)\n",
        "    (5): Dropout(p=0.5, inplace=False)\n",
-       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "    (6): Linear(in_features=4096, out_features=10, bias=True)\n",
        "  )\n",
        ")"
       ]
@@ -175,22 +195,33 @@
     }
    ],
    "source": [
+    "# Pre-trained model\n",
+    "'''\n",
     "weights = VGG19_Weights.DEFAULT\n",
     "model = vgg19(weights=weights).to(device)\n",
+    "model.eval()\n",
+    "'''\n",
+    "\n",
+    "# Retrained model\n",
+    "PATH = 'vgg19_imagenette.pth'\n",
+    "model = vgg19()\n",
+    "model.classifier[6] = torch.nn.Linear(in_features=4096, out_features=10)\n",
+    "model.load_state_dict(torch.load(PATH, weights_only=True))\n",
+    "model = model.to(device)\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0f62d333-1eb4-452d-acd8-b4bd9f0b1548",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-18T14:19:40.560751Z",
-     "iopub.status.busy": "2025-02-18T14:19:40.560119Z",
-     "iopub.status.idle": "2025-02-18T14:20:39.056218Z",
-     "shell.execute_reply": "2025-02-18T14:20:39.055724Z",
-     "shell.execute_reply.started": "2025-02-18T14:19:40.560728Z"
+     "iopub.execute_input": "2025-03-08T10:42:21.386018Z",
+     "iopub.status.busy": "2025-03-08T10:42:21.385801Z",
+     "iopub.status.idle": "2025-03-08T10:43:19.189746Z",
+     "shell.execute_reply": "2025-03-08T10:43:19.189312Z",
+     "shell.execute_reply.started": "2025-03-08T10:42:21.385997Z"
     }
    },
    "outputs": [
@@ -198,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|███████████████████████| 3925/3925 [00:58<00:00, 67.13images/s]\n"
+      "Evaluating: 100%|███████████████████████| 3925/3925 [00:57<00:00, 67.93images/s]\n"
      ]
     }
    ],
@@ -217,22 +248,26 @@
     "        # Retrieve image\n",
     "        img = img.to(device)\n",
     "        label = label.to(device)\n",
-    "        #Process image\n",
-    "        preprocess = weights.transforms()\n",
-    "        batch = preprocess(img)\n",
+    "        \n",
     "        # Prediction\n",
-    "        prediction = model(batch).squeeze(0).softmax(0)\n",
+    "        prediction = model(img).squeeze(0).softmax(0)\n",
     "        class_id = prediction.argmax().item()\n",
     "        score = prediction[class_id].item()\n",
-    "        true_score = prediction[label_to_id[label.item()]].item()\n",
+    "        true_score = prediction[label.item()].item()\n",
+    "        \n",
     "        # Correct?\n",
-    "        category_name = weights.meta[\"categories\"][class_id]\n",
-    "        correct = 'y'\n",
-    "        if(category_name != label_to_class[label.item()]):\n",
-    "            correct = 'n'\n",
+    "        #category_name = weights.meta[\"categories\"][class_id]\n",
+    "        \n",
+    "        # Extract class names from the dataset\n",
+    "        id_to_class = {v: k for k, v in imagenette_data.class_to_idx.items()}  # Reverse mapping\n",
+    "        # Get predicted category name\n",
+    "        category_name = pred_to_class[class_id]\n",
+    "        # Check if prediction is correct\n",
+    "        correct = 'y' if category_name == id_to_class[label.item()] else 'n'\n",
+    "        \n",
     "        # Log\n",
     "        img_path.append(image_paths[idx])\n",
-    "        true_label.append(label_to_class[label.item()])\n",
+    "        true_label.append(id_to_class[label.item()])\n",
     "        predicted_label.append(category_name)\n",
     "        confidence.append(score)\n",
     "        true_confidence.append(true_score)\n",
@@ -242,7 +277,35 @@
     "dict = {'image': img_path, 'true label': true_label, 'predicted label': predicted_label,\n",
     "        'confidence score': confidence, 'true confidence score': true_confidence, 'correct': correctness}\n",
     "df = pd.DataFrame(dict)\n",
-    "df.to_csv('vgg19_results.csv')"
+    "df.to_csv('vgg19_results_retrained.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "09881061-9f11-418b-8909-c1401a8b4967",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-03-08T10:51:04.160851Z",
+     "iopub.status.busy": "2025-03-08T10:51:04.160325Z",
+     "iopub.status.idle": "2025-03-08T10:51:04.164914Z",
+     "shell.execute_reply": "2025-03-08T10:51:04.164518Z",
+     "shell.execute_reply.started": "2025-03-08T10:51:04.160833Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation accuracy:  0.9401\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print evaluation accuracy\n",
+    "print('Evaluation accuracy: ', round(len(df[df['correct'] == 'y']) / len(df), 4))"
    ]
   }
  ],
