Reorganized folder and retrained vgg19 on Imagewoof dataset

--- a/lrp.ipynb
+++ b/lrp.ipynb
@@ -6,11 +6,11 @@
    "id": "6ca024db-0240-4bc1-a901-6169b98bdf2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-05T15:39:41.588761Z",
-     "iopub.status.busy": "2025-03-05T15:39:41.588641Z",
-     "iopub.status.idle": "2025-03-05T15:39:44.426923Z",
-     "shell.execute_reply": "2025-03-05T15:39:44.426364Z",
-     "shell.execute_reply.started": "2025-03-05T15:39:41.588746Z"
+     "iopub.execute_input": "2025-03-12T09:15:25.268902Z",
+     "iopub.status.busy": "2025-03-12T09:15:25.268784Z",
+     "iopub.status.idle": "2025-03-12T09:15:27.789860Z",
+     "shell.execute_reply": "2025-03-12T09:15:27.789266Z",
+     "shell.execute_reply.started": "2025-03-12T09:15:25.268888Z"
     }
    },
    "outputs": [],
@@ -48,11 +48,11 @@
    "id": "e6eb19d0-a73e-48c0-b829-8ed3f44e8ef2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-05T15:39:44.427574Z",
-     "iopub.status.busy": "2025-03-05T15:39:44.427364Z",
-     "iopub.status.idle": "2025-03-05T15:39:44.430456Z",
-     "shell.execute_reply": "2025-03-05T15:39:44.430022Z",
-     "shell.execute_reply.started": "2025-03-05T15:39:44.427560Z"
+     "iopub.execute_input": "2025-03-12T09:15:27.791146Z",
+     "iopub.status.busy": "2025-03-12T09:15:27.790952Z",
+     "iopub.status.idle": "2025-03-12T09:15:27.793853Z",
+     "shell.execute_reply": "2025-03-12T09:15:27.793490Z",
+     "shell.execute_reply.started": "2025-03-12T09:15:27.791131Z"
     }
    },
    "outputs": [],
@@ -68,11 +68,11 @@
    "id": "cfda1d7f-2d4d-4c97-8496-7285707668b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-05T15:39:44.431214Z",
-     "iopub.status.busy": "2025-03-05T15:39:44.431006Z",
-     "iopub.status.idle": "2025-03-05T15:39:44.435650Z",
-     "shell.execute_reply": "2025-03-05T15:39:44.435205Z",
-     "shell.execute_reply.started": "2025-03-05T15:39:44.431197Z"
+     "iopub.execute_input": "2025-03-12T09:15:27.794546Z",
+     "iopub.status.busy": "2025-03-12T09:15:27.794295Z",
+     "iopub.status.idle": "2025-03-12T09:15:27.806874Z",
+     "shell.execute_reply": "2025-03-12T09:15:27.806433Z",
+     "shell.execute_reply.started": "2025-03-12T09:15:27.794532Z"
     }
    },
    "outputs": [],
@@ -128,16 +128,16 @@
    "id": "d4c1f47f-f9d3-4858-b05a-f81f6f4826af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-05T15:39:44.436627Z",
-     "iopub.status.busy": "2025-03-05T15:39:44.436501Z",
-     "iopub.status.idle": "2025-03-05T15:39:44.440040Z",
-     "shell.execute_reply": "2025-03-05T15:39:44.439727Z",
-     "shell.execute_reply.started": "2025-03-05T15:39:44.436614Z"
+     "iopub.execute_input": "2025-03-12T09:15:27.807478Z",
+     "iopub.status.busy": "2025-03-12T09:15:27.807357Z",
+     "iopub.status.idle": "2025-03-12T09:15:27.811090Z",
+     "shell.execute_reply": "2025-03-12T09:15:27.810745Z",
+     "shell.execute_reply.started": "2025-03-12T09:15:27.807466Z"
     }
    },
    "outputs": [],
    "source": [
-    "def per_image_lrp():\n",
+    "def per_image_lrp(model):\n",
     "    \"\"\"Test function that plots heatmaps for images placed in the input folder.\n",
     "\n",
     "    Images have to be placed in their corresponding class folders.\n",
@@ -153,7 +153,7 @@
     "\n",
     "    data_loader = get_data_loader()\n",
     "    \n",
-    "    model = vgg19(weights=VGG19_Weights.DEFAULT)\n",
+    "    model = model\n",
     "    model.to(device)\n",
     "\n",
     "\n",
@@ -176,11 +176,11 @@
    "id": "73c3664c-4964-43d3-9fad-c5f48eb20212",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-05T15:39:44.440833Z",
-     "iopub.status.busy": "2025-03-05T15:39:44.440705Z",
-     "iopub.status.idle": "2025-03-05T15:39:59.661269Z",
-     "shell.execute_reply": "2025-03-05T15:39:59.660772Z",
-     "shell.execute_reply.started": "2025-03-05T15:39:44.440820Z"
+     "iopub.execute_input": "2025-03-12T09:15:27.811851Z",
+     "iopub.status.busy": "2025-03-12T09:15:27.811524Z",
+     "iopub.status.idle": "2025-03-12T09:15:43.344147Z",
+     "shell.execute_reply": "2025-03-12T09:15:43.343576Z",
+     "shell.execute_reply.started": "2025-03-12T09:15:27.811836Z"
     }
    },
    "outputs": [
@@ -190,31 +190,39 @@
      "text": [
       "Using: cuda\n",
       "\n",
-      "2.28 FPS\n",
-      "7.60 FPS\n",
-      "7.55 FPS\n",
-      "7.69 FPS\n",
-      "11.59 FPS\n",
-      "10.10 FPS\n",
-      "6.67 FPS\n",
-      "8.52 FPS\n",
-      "5.34 FPS\n",
-      "5.29 FPS\n",
-      "8.42 FPS\n",
-      "7.23 FPS\n",
-      "6.77 FPS\n",
-      "4.33 FPS\n",
-      "5.80 FPS\n",
-      "4.77 FPS\n",
-      "6.26 FPS\n",
-      "1.98 FPS\n",
-      "6.81 FPS\n",
-      "23.22 FPS\n"
+      "3.46 FPS\n",
+      "5.44 FPS\n",
+      "7.93 FPS\n",
+      "7.47 FPS\n",
+      "6.71 FPS\n",
+      "7.38 FPS\n",
+      "11.81 FPS\n",
+      "7.72 FPS\n",
+      "6.50 FPS\n",
+      "6.78 FPS\n",
+      "7.71 FPS\n",
+      "11.07 FPS\n",
+      "7.45 FPS\n",
+      "10.34 FPS\n",
+      "7.63 FPS\n",
+      "7.33 FPS\n",
+      "7.73 FPS\n",
+      "7.39 FPS\n",
+      "7.06 FPS\n",
+      "10.07 FPS\n"
      ]
     }
    ],
    "source": [
-    "per_image_lrp()"
+    "# Pre-trained model\n",
+    "# per_image_lrp(vgg19(weights=VGG19_Weights.DEFAULT))\n",
+    "\n",
+    "# Retrained model\n",
+    "PATH = 'vgg19_imagenette.pth'\n",
+    "model = vgg19()\n",
+    "model.classifier[6] = torch.nn.Linear(in_features=4096, out_features=10)\n",
+    "model.load_state_dict(torch.load(PATH, weights_only=True))\n",
+    "per_image_lrp(model)"
    ]
   }
  ],
